kubernetes/aws/task-030-kong-ingress-on-eks/echo-app/ingress-with-plugin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-example-com
  annotations:
    konghq.com/plugins: request-id
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /bar
            backend:
              serviceName: echo
              servicePort: 80
